A fix for Bug#32724 "innodb_mysql.test fails randomly". Enable back the disabled test case.